Добаввление кодов ответа в контроллеры
